Fixed contentName with spaces

--- a/templates/index.html
+++ b/templates/index.html
@@ -32,43 +32,43 @@
             <div class="col-md-1 col-md-offset-2 progress-label">Java:</div>
             <div class="col-md-7">
                 <div class="progress">
-                    <div class="progress-bar progress-bar-success progress-bar-striped active" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100" style="width: 95%"></div>
+                    <div class="progress-bar progress-bar-{{superAdd 'index' 'bar1Class' 'text' 'success'}} progress-bar-striped active" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100" style="width: {{superAdd 'index' 'bar1Width' 'text' '95'}}%"></div>
                 </div>
             </div>
             <div class="col-md-1 col-md-offset-2  progress-label">Python:</div>
             <div class="col-md-7">
                 <div class="progress">
-                    <div class="progress-bar progress-bar-success progress-bar-striped active" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100" style="width: 95%"></div>
+                    <div class="progress-bar progress-bar-{{superAdd 'index' 'bar2Class' 'text' 'success'}} progress-bar-striped active" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100" style="width: {{superAdd 'index' 'bar2Width' 'text' '95'}}%"></div>
                 </div>
             </div>
             <div class="col-md-1 col-md-offset-2  progress-label">Javascript:</div>
             <div class="col-md-7">
                 <div class="progress">
-                    <div class="progress-bar progress-bar-success progress-bar-striped active" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100" style="width: 90%"></div>
+                    <div class="progress-bar progress-bar-{{superAdd 'index' 'bar3Class' 'text' 'success'}} progress-bar-striped active" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100" style="width: {{superAdd 'index' 'bar3Width' 'text' '90'}}%"></div>
                 </div>
             </div>
             <div class="col-md-1 col-md-offset-2  progress-label">NodeJS:</div>
             <div class="col-md-7">
                 <div class="progress">
-                    <div class="progress-bar progress-bar-success progress-bar-striped active" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100" style="width: 90%"></div>
+                    <div class="progress-bar progress-bar-{{superAdd 'index' 'bar4Class' 'text' 'success'}} progress-bar-striped active" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100" style="width: {{superAdd 'index' 'bar4Width' 'text' '90'}}%"></div>
                 </div>
             </div>
             <div class="col-md-1 col-md-offset-2  progress-label">Meteor:</div>
             <div class="col-md-7">
                 <div class="progress">
-                    <div class="progress-bar progress-bar-warning progress-bar-striped active" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100" style="width: 75%"></div>
+                    <div class="progress-bar progress-bar-{{superAdd 'index' 'bar5Class' 'text' 'warning'}} progress-bar-striped active" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100" style="width: {{superAdd 'index' 'bar5Width' 'text' '75'}}%"></div>
                 </div>
             </div>
             <div class="col-md-1 col-md-offset-2  progress-label">C#:</div>
             <div class="col-md-7">
                 <div class="progress">
-                    <div class="progress-bar progress-bar-warning progress-bar-striped active" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100" style="width: 60%"></div>
+                    <div class="progress-bar progress-bar-{{superAdd 'index' 'bar6Class' 'text' 'warning'}} progress-bar-striped active" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100" style="width: {{superAdd 'index' 'bar6Width' 'text' '60'}}%"></div>
                 </div>
             </div>
         </div>
         <!-- Skills Progress Bars END -->
         <div class="row">
-            <h3 class="text-center">Itching for some work done?</h3></div>
+            <h3 class="text-center">{{superAdd 'index' 'Call To Action' 'text' 'Itching for some work done?'}}</h3></div>
         <div class="row">
             <a href="/contact" class="button">
                 <div class="col-sm-4 col-sm-offset-4">
