--- a/app/templates/dash-pages.html
+++ b/app/templates/dash-pages.html
@@ -18,7 +18,7 @@
 				{{#each contentBlocks}}
 					<div class="col-md-12 change-pageText {{checkCharLength this.content}}">
 						<h4>{{capitalizeFirstLetter this.name}}</h4>
-						<textarea class="form-control change-{{this.name}}">{{this.content}}</textarea>
+						<textarea class="form-control change-{{replaceSpaces this.name}}">{{this.content}}</textarea>
 						<button class="btn btn-default change-submitText">Submit</button>
 					</div>
 				{{/each}}
